% Copyright (c) 2024, Avraham Adler All rights reserved
% SPDX-License-Identifier: MPL-2.0+

\name{NEWS}
\alias{NEWS}
\title{NEWS file for the MBBEFDLite package}

\section{Version 0.0.2 (2024-05-16)}{
  \subsection{Fixed}{
    \itemize{
      \item Corrected package link in \file{CITATION}.
      \item Removed extra parentheses in description of \code{g} in docs.
    }
  }
  \subsection{Added}{
    \itemize{
      \item Expanded documentation of \code{ecmb}.
      \item Added \acronym{DOI}.
    }
  }
}

\section{Version 0.0.1 (2024-05-14)}{
    \itemize{
      \item Initial release.
  }
}