@@ -3,7 +3,7 @@ Type: Package
 Title: Statistical Functions for the
         Maxwell-Boltzmann-Bose-Einstein-Fermi-Dirac (MBBEFD) Family of
         Distributions
-Version: 0.0.2
+Version: 0.0.3
 Authors@R: person(given="Avraham", family="Adler",role=c("aut", "cre", "cph"),
     email="Avraham.Adler@gmail.com", comment = c(ORCID = "0000-0002-3039-0703"))
 Description: Provides probability mass, distribution, quantile, random variate
@@ -19,8 +19,8 @@ BugReports: https://github.com/aadler/MBBEFDLite/issues
 ByteCompile: yes
 NeedsCompilation: yes
 UseLTO: yes
-Packaged: 2024-05-16 16:19:12 UTC; Parents
+Packaged: 2024-06-20 16:46:58 UTC; Parents
 Author: Avraham Adler [aut, cre, cph] (<https://orcid.org/0000-0002-3039-0703>)
 Maintainer: Avraham Adler <Avraham.Adler@gmail.com>
 Repository: CRAN
-Date/Publication: 2024-05-19 14:40:11 UTC
+Date/Publication: 2024-06-20 18:30:07 UTC
