@@ -1,23 +1,23 @@
-e0db3e8af9f6474773ad433498c85fa3 *DESCRIPTION
+39ccecfb3d9f4676dc4a1872249be412 *DESCRIPTION
 1dee5441d6b06209882ff5bca15ac255 *NAMESPACE
 7b6357c62bd7ae9fe449cee85f48428a *R/mbbefd.R
-be765cf055f305f9fe291bcaf1b74aa0 *R/mom.R
-00bf28f5815be50a848d641756287b20 *README.md
-f4ba5e479a95427c2bc112f6a1d18184 *build/partial.rdb
-4b26cd78a07d05b06d1ad4f40b680498 *inst/CITATION
-2993011babaa4b722b793b4e3073afd9 *inst/NEWS.Rd
+9d9f45f6b50e8d8d65483d27b710adf4 *R/mom.R
+dd74f9bc6bef2e70f115946f8c0a41ea *README.md
+851f3a9485ce556e0b68f7b42d2d5796 *build/partial.rdb
+cdfad2fca23b3e87e5cd4a6a33b7ec27 *inst/CITATION
+ae34e3d11477e08fc926177616af8287 *inst/NEWS.Rd
 a313235c514de46f5a9d129cbca42458 *inst/tinytest/test_MoMmb.R
 acc0295166477ea425927fa1d4c5a22d *inst/tinytest/test_dmb.R
 0dc0f6932803f59d5219c353fb30196f *inst/tinytest/test_ecmb.R
-577b9c1fbffaaa52f080ffdaadda29e2 *inst/tinytest/test_package_metadata.R
+4b809d7a4450b35f6a68749aa645440f *inst/tinytest/test_package_metadata.R
 8352df79f194eeb0af093df0cc2cfbe9 *inst/tinytest/test_pmb.R
 f239baab6670311609ff2a1e31a875e0 *inst/tinytest/test_qmb.R
 293a437e2fdbb39748059c249d244964 *inst/tinytest/test_rmb.R
 90fbd8c5180d4616210bf80c09cbee88 *man/MBBEFDLite-internal.Rd
 ae488d350ab22fae20972a42d03efcce *man/MBBEFDLite-package.Rd
-eae510248a5a7760b4ed3df2ea39adae *man/MoMmb.Rd
-1fa3f14be61a7c532fa12d73f9b21824 *man/dpqrmb.Rd
-176da975b7e9c59db2b9464b4c997bdc *man/ecmb.Rd
+31a93117527d535839e21287d8f005d6 *man/MoMmb.Rd
+e18f2467ef3b3c2ed0fc3dea10d0aa5a *man/dpqrmb.Rd
+da371f7d147bb61f698a69e655b2b5ce *man/ecmb.Rd
 5f0440485b0e517c9a984f472cb484e6 *src/MBBEFDLite.h
 17814c8b2b2565ed9d1186dc240c6304 *src/Makevars
 9b957eadbae62d78a6af2b42bc2a3827 *src/dmb.c
