@@ -5,6 +5,17 @@
 \alias{NEWS}
 \title{NEWS file for the MBBEFDLite package}
 
+\section{Version 0.0.3 (2024-06-20)}{
+  \subsection{Changed}{
+    \itemize{
+      \item Adjust \R code for \code{mommb} to be more efficient.
+      \item Update documentation.
+      \item Use native \acronym{CRAN} \acronym{DOI}.
+      \item Expand package metadata tests.
+    }
+  }
+}
+
 \section{Version 0.0.2 (2024-05-16)}{
   \subsection{Fixed}{
     \itemize{
